Bug 1796504 - Use __STDC_VERSION__ rather than __STDC__ as a guard. r=nss-reviewers,mt

clang-cl doesn't define the latter.

Differential Revision: https://phabricator.services.mozilla.com/D159826